feat: Enable PWA functionality
Adds a web app manifest, PWA meta tags, and a service worker to enable offline caching and installation of the "Καταγραφέας Παλετών" application. This allows the app to be installed on mobile devices and function offline.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="el">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Καταγραφέας Παλετών</title>
+    
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#f1f5f9" />
+
+    <!-- iOS PWA Tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Καταγραφέας Παλετών" />
+    <link rel="apple-touch-icon" href="icon-192x192.png" />
+
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
